src/containers/home/styles.scss
@import '/src/shared/styles';

.home {
  @extend %pageContainer;
}

.listItemWrap {
  width: 100%;
  margin-bottom: 7px;
  opacity: 0;
  transition: 1.5s $ease;
  transform: translateX(calc(-100% - 20px));
  border-radius: 0;
  border: none;

  &.overflow {
    //width: calc(100% + 11px);
  }

  &:last-of-type {
    margin-bottom: 0;
  }

  & > div {
    background: $white;
    color: $black;
    border-radius: 0;
    padding: 24px 33px;
    border: none;
    height: auto;
  }

  &.dragging {
    @extend %dragging-helper;
  }
}

.pageListItemWrap {
  transform: translateX(calc(100% + 20px));
}

.newListItemWrap {
  transform: translateX(calc(100% + 20px));
}

.listContainer {
  width: 100%;
  padding: 140px 0 0;
  box-sizing: border-box;
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  overflow-y: auto;
  overflow-x: hidden;

  &.sorting {
    li {
      pointer-events: none;
      opacity: 0.5;
    }
  }

  @for $i from 1 through 1000 {
    & > li:nth-of-type(#{$i}) {
      transition-delay: #{$i * 0.05}s;
    }
  }

  &.addNowList {
    display: flex;
    flex-direction: column;
    justify-content: start;
    align-items: center;
    padding: 160px 10% 0;
  }
}

.focus {
  z-index: 1;

  .listItemWrap {
    opacity: 1;
    transform: translateX(0%);
  }
}

.hideLeft {
  .listItemWrap {
    transform: translateX(calc(-100% - 20px));
  }
}

.addBtn {
  bottom: 20px;
  left: 20px;
  position: absolute;
  z-index: 1;
  transition: 2s $ease;

  &.rotate {
    transform: rotate(-45deg);
  }
}

.inputContainer {
  background: white;
  width: 100%;
  height: 100%;
  position: fixed;
  padding: 20px;
  box-sizing: border-box;
  bottom: 0;
  left: 0;
  z-index: 1;
  transform: translateY(100%);
  transition: 1s $ease;

  &.show {
    transform: translateY(calc(#{$nav-bar-height-mobile} + 88px));
  }
}

.btn {
  margin: 20px 0;
  border-radius: 30px;
  height: 60px;
  //flex-shrink: 0;

  &:last-of-type {
    margin-bottom: 0;
  }

  :global {
    .inner {
      background: transparent;
      padding: 0;
      color: $white;
    }
  }
}

